<resources>
    <string name="app_name">MobileApp</string>
    <string name="register_label">Регистрация</string>
    <string name="register_username">Имя пользователя</string>
    <string name="register_password">Пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="login_label">Вход</string>
    <string name="user_nickname_label">Здесь юзернейм</string>
    <string name="main_page_label">Главная страница</string>
    <string name="appNameLabel">Учет финансов</string>
    <string name="redir_categories_button_text">Добавить категории</string>
    <string name="redir_transactions_button_text">Добавить транзакции</string>
    <string name="logout_button_text">Выход</string>
    <string name="category_name_input">Название категории</string>
    <string name="categoriesViewName">Категории</string>
    <string name="addCategoryTitle">Добавить категорию</string>
    <string name="go_back">Назад</string>
    <string name="add_button">Добавить</string>
</resources>